[project]
name = "prototuner"
description = "A set of good deps I keep using in AllTuner projects"
version = "0.1.22"
requires-python = ">=3.10"
dependencies = [
    # These are the base dependencies of AllTuner's blessed stack
    "aioboto3>=15.1.0",
    "arel>=0.3.0",
    "asyncer>=0.0.8",
    "authlib>=1.6.2",
    "beanie[zstd]>=2.0.0",
    "click>=8.2.1",
    "email-validator>=2.2.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.116.1",
    "httpx[http2]>=0.28.1",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.3",
    "pydantic[email]>=2.11.7",
    "pydantic-extra-types[pycountry]>=2.10.5",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "redis[hiredis]>=6.4.0",
    "rich>=14.1.0",
    "streaq>=0.2.1",
    "starlette-babel>=1.0.3",
    "starlette-compress>=1.6.1",
    "starlette-htmx>=0.1.1",
    "typer-slim[standard]>=0.16.1",
]

[project.optional-dependencies]
dev = [
    # These are the development dependencies of AllTuner's blessed stack
    "babel>=2.17.0",
    "cloudflare>=4.3.1",
    "djlint>=1.36.4",
    "ruff>=0.12.10",
    "ty>=0.0.1a19",
    "types-aioboto3[s3,ses]>=15.1.0",
    "types-authlib>=1.6.2.20250825",
    "types-pyyaml>=6.0.12.20250822",
]
