[project]
name = "prototuner"
description = "A set of good deps I keep using in AllTuner projects"
version = "0.2.3"
requires-python = ">=3.10"
dependencies = [
    # These are the base dependencies of AllTuner's blessed stack
    "aioboto3>=15.1.0",
    "arel>=0.3.0",
    "asyncer>=0.0.8",
    "authlib>=1.6.4",
    "beanie[zstd]>=2.0.0",
    "click>=8.3.0",
    "email-validator>=2.3.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.116.2",
    "httpx[http2]>=0.28.1",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.3",
    "pydantic[email]>=2.11.9",
    "pydantic-extra-types[pycountry]>=2.10.5",
    "pydantic-settings>=2.10.1",
    "pyyaml>=6.0.2",
    "redis[hiredis]>=6.4.0",
    "rich>=14.1.0",
    "starlette-babel>=1.0.3",
    "starlette-compress>=1.6.1",
    "starlette-htmx>=0.1.1",
    "streaq[web]>=5.2.2",
    "typer-slim[standard]>=0.17.4",
]

[project.optional-dependencies]
dev = [
    # These are the development dependencies of AllTuner's blessed stack
    "babel>=2.17.0",
    "cloudflare>=4.3.1",
    "djlint>=1.36.4",
    "ruff>=0.13.1",
    "ty>=0.0.1a21",
    "types-aioboto3[s3,ses]>=15.1.0",
    "types-authlib>=1.6.4.20250919",
    "types-pyyaml>=6.0.12.20250915",
]

[dependency-groups]
dev = ["djlint>=1.36.4"]

[tool.uv]
dependency-metadata = [
    # This is a temporary fix to ensure Arel doesn't hold back wathcfiles,
    # which holds back StreaQ. We should PR upstream to fix this properly.
    { name = "arel", version = "0.3.0", requires-dist = ["watchfiles>=1.1.0"] },
]
