[project]
name = "prototuner"
description = "A set of good deps I keep using in AllTuner projects"
version = "1.0.6"
requires-python = ">=3.10"
dependencies = [
    # These are the base dependencies of AllTuner's blessed stack
    "aioboto3>=15.2.0",
    "arel>=0.4.0",
    "asyncer>=0.0.9",
    "authlib>=1.6.5",
    "beanie[zstd]>=2.0.0",
    "click>=8.3.0",
    "email-validator>=2.3.0",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.118.1",
    "httpx[http2]>=0.28.1",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.3",
    "pydantic[email]>=2.12.0",
    "pydantic-extra-types[pycountry]>=2.10.5",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "redis[hiredis]>=6.4.0",
    "rich>=14.1.0",
    "sse-starlette>=3.0.2",
    "starlette-babel>=1.0.3",
    "starlette-compress>=1.6.1",
    "starlette-htmx>=0.1.1",
    "streaq[web]<6.0.0",
    "typer-slim[standard]>=0.19.2",
]

[project.optional-dependencies]
dev = [
    # These are the development dependencies of AllTuner's blessed stack
    "babel>=2.17.0",
    "cloudflare>=4.3.1",
    "copier>=9.9.0,<9.9.1",
    "djlint>=1.36.4",
    "dunamai>=1.25.0",
    "gh-bin>=2.78.0",
    "just-bin>=1.42.4",
    "pre-commit>=4.3.0",
    "python-dotenv[cli]>=1.1.1",
    "ruff>=0.14.0",
    "semver>=3.0.4",
    "ty>=0.0.1a21",
    "types-aioboto3[s3,ses]>=15.2.0",
    "types-authlib>=1.6.5.20251005",
    "types-pyyaml>=6.0.12.20250915",
    "uv-bump>=0.3.1",
]

[dependency-groups]
dev = [
    "just-bin>=1.42.4",
    "uv-bump>=0.3.1",
]

[tool.uv]
# FIXME: Remove this override once https://github.com/MagicStack/uvloop/pull/XXX is merged and released
override-dependencies = [
    "uvloop @ git+https://github.com/davidpoblador/uvloop.git",
]
